[package]
name = "spk"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
#clap = { version = "3.2.16", features = ["derive"] }
tokio-rustls = "0.23.4"
rustls-pemfile = "0.2.1"
ini = { path = "./ini" }
async-trait = "0.1.57"
procmacro = { path = "src/procmacro" }